--- a/modules/client-configuration/nav-client-config-guide.adoc
+++ b/modules/client-configuration/nav-client-config-guide.adoc
@@ -21,6 +21,11 @@ ifndef::backend-pdf[]
 *** xref:clients-rh.adoc[Red Hat Clients]
 *** xref:clients-centos.adoc[CentOS Clients]
 *** xref:clients-ubuntu.adoc[Ubuntu Clients]
+// Virtualization
+** xref:virtualization.adoc[Virtualization]
+*** xref:virt-xenkvm.adoc[Virtualization with Xen and KVM]
+*** xref:virt-vmware.adoc[Virtualization with VMWare]
+*** xref:virt-file.adoc[Virtualization with Other Hosts]
 //  Client Admin Tasks
 ** xref:clients-and-activation-keys.adoc[Activation Keys]
 ** xref:channels.adoc[Channels]
@@ -80,6 +85,15 @@ include::modules/client-configuration/pages/clients-rh.adoc[leveloffset=+2]
 include::modules/client-configuration/pages/clients-centos.adoc[leveloffset=+2]
 
 include::modules/client-configuration/pages/clients-ubuntu.adoc[leveloffset=+2]
+
+// Virtualization
+include::modules/administration/pages/virtualization.adoc[leveloffset=+1]
+
+include::modules/administration/pages/virt-xenkvm.adoc[leveloffset=+2]
+
+include::modules/administration/pages/virt-vmware.adoc[leveloffset=+2]
+
+include::modules/administration/pages/virt-file.adoc[leveloffset=+2]
 
 // Client Admin Tasks
 
