--- a/modules/client-configuration/pages/virt-file.adoc
+++ b/modules/client-configuration/pages/virt-file.adoc
@@ -22,7 +22,7 @@ It is not designed for manually created files.
 * In the [guimenu]``Label`` field, type a custom name for your VHM.
 * In the [guimenu]``Url`` field, type the path to your exported JSON configuration file.
 . Click btn:[Create] to save your changes and create the VHM.
-. On the [guimenu]``Virtual Host Managers`` page select the new VHM.
+. On the [guimenu]``Virtual Host Managers`` page, select the new VHM.
 . On the [guimenu]``Properties`` page, click btn:[Refresh Data] to inventory the new VHM.
 
 
