--- a/modules/client-configuration/pages/virt-vmware.adoc
+++ b/modules/client-configuration/pages/virt-vmware.adoc
@@ -1,7 +1,7 @@
 [[virt-vmware]]
 = Virtualization with VMWare
 
-You can use VMWare vSphere virtual machines, including ESXi and vCenter, with {productname} by setting up a virtual host manager, or VHM.
+You can use VMWare vSphere virtual machines, including ESXi and vCenter, with {productname} by setting up a virtual host manager (VHM).
 
 To begin, you will need to set up a VHM on your {productname} Server, and inventory the available VM hosts.
 Taskomatic can then begin data collection using the VMs API.
