--- a/modules/client-configuration/pages/virtualization.adoc
+++ b/modules/client-configuration/pages/virtualization.adoc
@@ -8,7 +8,7 @@ If you choose to, you can install several virtual hosts to manage groups of gues
 The range of capabilities that virtualized clients have depends on the third-party virtualization provider you choose.
 
 Xen and KVM hosts and guests can be managed directly in {productname}.
-This enables you to autoinstall hosts and guests using {ay} or {kickstart}, and manage guests in the {webui}}.
+This enables you to autoinstall hosts and guests using {ay} or {kickstart}, and manage guests in the {webui}.
 
 For VMWare, including VMWare vSphere, {productname} requires you to set up a virtual host manager, or VHM, to control the VMs.
 This gives you control over the hosts and guests, but in a more limited way than available with Xen and KVM.
