Add Cobbler admon to Install Guide & Retail Guide.

--- a/modules/client-configuration/pages/cobbler.adoc
+++ b/modules/client-configuration/pages/cobbler.adoc
@@ -25,6 +25,13 @@ For more detailed Cobbler documentation, see http://cobbler.github.io/manuals/.
 {suse} only support those Cobbler functions that are either listed within our formal documentation or available via the web interface and API.
 ====
 
+[NOTE]
+.Cobbler and {smr}
+====
+Cobbler is not currently supported within {smr} environments.
+If you intend to use your installation with {smr} formulas, do not configure Cobbler.
+====
+
 
 
 [[advanced.topics.cobbler.reqs]]
