--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -15,7 +15,12 @@ Branch server installation steps:
 
 Each procedure is detailed in this section.
 
-
+[NOTE]
+.Cobbler and {smr}
+====
+Cobbler is not currently supported within {smr} environments.
+If you intend to use your installation with {smr} formulas, do not configure Cobbler.
+====
 
 == Install the build host and register it to {susemgr}
 
