Added admon about multiple Salt environments.

--- a/modules/salt/pages/salt-terminology.adoc
+++ b/modules/salt/pages/salt-terminology.adoc
@@ -69,3 +69,10 @@ This package is not installed automatically during the salt minion package insta
 The salt-broker acts like a switch and not like a hub, therefore Peer communication will only work for minions behind the same broker/Proxy.
 For more information on Salt and peer communication see: https://docs.saltstack.com/en/latest/ref/peer.html
 ====
+
+[NOTE]
+.Salt Environments
+====
+{productname} implements Salt with a single environment.
+Multiple Salt environments are not supported.
+====
