--- a/modules/client-configuration/pages/disconnected-setup.adoc
+++ b/modules/client-configuration/pages/disconnected-setup.adoc
@@ -21,7 +21,7 @@ SUSE Manager always connects to SMT or RMT in an offline or disconnected scenari
 .RMT
 The successor of SMT and currently runs on the following systems:
 
-* {sle} 15 (when available)
+* {sle} 15, and later
 * Temporarily (for testing only): 12 SP2, and 12 SP3
 * Not officially supported: openSUSE Leap 42.2, Leap 42.3, and openSUSE Tumbleweed
 
