Removed entities from headings

--- a/modules/client-configuration/pages/disconnected-setup.adoc
+++ b/modules/client-configuration/pages/disconnected-setup.adoc
@@ -41,7 +41,7 @@ You will still need it, if you want to update {sle}
 
 
 [[rmtool]]
-== {rmtool} (RMT) and Disconnected Setup (DMZ)
+== RMT and Disconnected Setup (DMZ)
 
 The following procedure will guide you through using RMT.
 It will work best with a dedicated RMT instance per {productname}
@@ -103,7 +103,7 @@ On the {productname}
 server, continue with <<disconnect.mgr.update-repos>>.
 
 [[sub.mgr.tool]]
-== {smtool} (SMT) and Disconnected Setup (DMZ)
+== SMT and Disconnected Setup (DMZ)
 
 
 The following procedure will guide you through using SMT.
