--- a/modules/client-configuration/pages/disconnected-setup.adoc
+++ b/modules/client-configuration/pages/disconnected-setup.adoc
@@ -44,7 +44,7 @@ You will still need it, if you want to update {sle}
 == RMT and Disconnected Setup (DMZ)
 
 The following procedure will guide you through using RMT.
-It will work best with a dedicated RMT instance per {productname}
+It will work best with a dedicated RMT instance per {productname}.
 .
 
 .Procedure: RMT: Fetching Repository Data from {scc}
