Edits thru end clients on proxy sections.

--- a/modules/client-configuration/pages/client-proxy.adoc
+++ b/modules/client-configuration/pages/client-proxy.adoc
@@ -6,7 +6,7 @@ Registering clients on a {productname} Proxy is very similar to registering them
 
 This section contains information on registering Salt clients on a proxy using the {webui}, or with a bootstrap script.
 
-Within the {webui}, standard proxy pages will show information about both Salt and traditional clients.
+Within the {webui}, proxy pages will show information about both Salt and traditional clients.
 
 You can see a list of clients that are connected to a proxy by clicking on the name of the proxy in menu:Main Navigation[Systems > Systems > Proxy], selecting the [guimenu]``Details`` tab, and then selecting the [guimenu]``Proxy`` tab.
 
