--- a/modules/client-configuration/pages/registration-webui.adoc
+++ b/modules/client-configuration/pages/registration-webui.adoc
@@ -1,15 +1,15 @@
 [[registering.clients.webui]]
 = Registering Clients with the {webui}
 
-Registering clients with the {productname} {webui} works for Salt minions only.
-
+You can register clients in the {productname} {webui} using bootstrap.
+This works for Salt minions only.
 
 
 .Procedure: Registering clients in the {webui}
 
 . In the {productname} {webui}, navigate to menu:Systems[Bootstrapping].
 . In the [guimenu]``Host`` field, type the fully qualified domain name (FQDN) of the client to be bootstrapped.
-. In the [guimenu]``SSH Port`` field, type the SSH port number that will be used to connect and bootstrap the client.
+. In the [guimenu]``SSH Port`` field, type the SSH port number to use to connect and bootstrap the client.
 By default, the SSH  port is [systemitem]``22``.
 . In the [guimenu]``User`` field, type the username to log in to the client.
 By default, the username is [systemitem]``root``.
