--- a/modules/client-configuration/pages/manual-registration-overview.adoc
+++ b/modules/client-configuration/pages/manual-registration-overview.adoc
@@ -3,8 +3,8 @@
 
 There are two ways to register clients to your {productname} Server.
 
-For salt clients, the simplest method is to register your clients using the {productname} {webui}.
+For Salt clients, the simplest method is to bootstrap your clients using the {productname} {webui}.
 
-If you need to have more control over the process, want to register many clients, or are registering traditional clients, we recommend using a bootstrap script.
+If you need to have more control over the process, want to register many clients, or are registering traditional clients, we recommend creating a bootstrap script.
 
 Both methods are described in this manual.
