--- a/modules/installation/nav-installation-guide.adoc
+++ b/modules/installation/nav-installation-guide.adoc
@@ -21,6 +21,7 @@ endif::[]
 *** xref:install-ibmz.adoc[Install on IBM Z]
 ** Setting Up
 *** xref:server-setup.adoc[Server Setup]
+*** xref:proxy-registration.adoc[Proxy Registration]
 *** xref:proxy-setup.adoc[Proxy Setup]
 //GFDL
 //** xref:common_gfdl1.2_i.adoc[License]
@@ -83,6 +84,7 @@ include::modules/installation/pages/install-ibmz.adoc[leveloffset=+2]
 include::modules/installation/pages/server-setup.adoc[leveloffset=+2]
 
 // Proxy Setup
+include::modules/installation/pages/proxy-registration.adoc[leveloffset=+2]
 include::modules/installation/pages/proxy-setup.adoc[leveloffset=+2]
 
 
