--- a/modules/administration/pages/intro.adoc
+++ b/modules/administration/pages/intro.adoc
@@ -1,7 +1,7 @@
 [[admin-manual-introduction]]
 = Introduction
 
-This book provides guidance on performing common Administrative tasks on {productname}.
+This book provides guidance on performing common administrative tasks on {productname}.
 
 
 
