--- a/modules/retail/pages/retail-deploy-terminals.adoc
+++ b/modules/retail/pages/retail-deploy-terminals.adoc
@@ -69,7 +69,7 @@ Each hardware type group must have the Saltboot formula applied.
 . Configure the Saltboot formula according to the instructions in xref:retail:retail-formulas.adoc[].
 
 
-== Synchronize images to the branch server
+== Synchronize Images to the Branch Server
 
 .Procedure: Synchronizing images to the branch server
 
@@ -108,7 +108,7 @@ image::retail_imagesync_formula.png[scaledwidth=80%]
 
 
 
-== Deploy images to the terminals
+== Deploy Images to the Terminals
 
 .Procedure: Deploying images to the terminals
 
