--- a/modules/retail/pages/retail-install-unified.adoc
+++ b/modules/retail/pages/retail-install-unified.adoc
@@ -1,7 +1,7 @@
 [[install-server-unified]]
 = Installing with the Unified Installer
 
-{smr} is a {suse} base product from version 4.0.
+{smr} 4.0 is a {suse} base product.
 This section describes how to install {smr} from {sls} installation media.
 It assumes you have already registered the {susemgr} product with the {scc} and have a registration code.
 
