--- a/modules/retail/pages/retail-migration-slepostosuma.adoc
+++ b/modules/retail/pages/retail-migration-slepostosuma.adoc
@@ -71,8 +71,7 @@ After all the branches are migrated, shutdown and remove the old SLEPOS Admin Se
 
 In this procedure, you migrate the SLEPOS infrastructure and the branches one by one, first exporting and then importing.
 
-. Install a {susemgr} server {productnumber} (with the Retail pattern).
-// FIXME: update this URL when 4.0 is released
+. Install a {susemgr} server {productnumber} (with a [literal]``SUSE Manager for Retail Server`` [guimenu]``System Role``).
 For more information, see xref:retail:retail-install.adoc[].
 
 . On every branch server:
