--- a/modules/retail/nav-retail.adoc
+++ b/modules/retail/nav-retail.adoc
@@ -7,7 +7,8 @@ ifndef::backend-pdf[]
 ** xref:retail-install.adoc[Installing]
 *** xref:retail-requirements.adoc[Requirements]
 *** xref:retail-install-unified.adoc[Installing with the Unified Installer]
-*** xref:retail-install-packages.adoc[Installing from Packages]
+// FIXME: needs research, 2019-07-23, ke:
+// *** xref:retail-install-packages.adoc[Installing from Packages]
 *** xref:retail-install-setup.adoc[Setting up]
 *** xref:retail-deploy-terminals.adoc[Deploying Terminals]
 // Formulas
