--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -24,7 +24,7 @@ This can include database entries of registered systems, Salt pillar data for im
 
 Build hosts can be arbitrary servers or virtual machines.
 They are used to securely build operating system images.
-Build hosts should be based on {sls}{nbsp}12 SP3.
+Build hosts should be based on {sls}{nbsp}12 SP3 or SP4.
 
 
 
@@ -43,7 +43,7 @@ The branch server can operate in several different network configurations:
 * The branch server shares a network with the terminals, and provides a connection to the {susemgr} server.
   In this configuration, the branch server is not required to manage a network (DHCP and DNS services), but acts as a PXE boot server and provides FTP and TFTP services.
 
-For more information on {smr} Branch servers, see documentation on {susemgr} Proxy servers.
+For more information on {smr} Branch servers, see documentation on {susemgr} Proxy servers (xref:installation/install-proxy-unified.adoc[]).
 
 
 
@@ -63,14 +63,14 @@ The minimum memory requirement is 1024 MB for hosts that need to run OS images b
 *Hardware Requirements for PoS Terminals:*
 . At least 1 GB of RAM.
 For more information, see the documentation of the underlying system (in this case: {sls}{nbsp}12).
-. Enough disk space depending on the image size.
+. Disk space depending on the image size.
 
-For more information on {smr} PoS terminals, see documentation on {susemgr} Salt clients.
+For more information on {smr} PoS terminals, see documentation on {susemgr} Salt clients (xref:client-configuration/client-config-overview.adoc[]).
 
 
 
 [[retail.sect.components.fitting]]
-== Fitting it all together
+== Fitting It All Together
 
 
 {smr} uses the same technology as {susemgr}, but is customized to address the needs of retail organizations.
@@ -78,7 +78,7 @@ For more information on {smr} PoS terminals, see documentation on {susemgr} Salt
 
 
 [[retail.sect.components.fitting.hardware-types]]
-=== Hardware types
+=== Hardware Types
 Because every environment is different, and can contain many different configurations of many different terminals, {smr} uses hardware types to simplify device management.
 
 Hardware types allow you to group devices according to manufacturer and device name, so that all devices of a particular type can be managed as one.
@@ -86,7 +86,7 @@ Hardware types allow you to group devices according to manufacturer and device n
 
 
 [[retail.sect.components.fitting.formulas]]
-=== Salt formulas
+=== Salt Formulas
 
 {smr} uses Salt formulas to help simplify configuration.
 Formulas are pre-written Salt states, that are used to configure your installation.
