--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -93,7 +93,7 @@ Do not install the branch server as a traditionally managed client.
 // ke, 2019-06-19
 For instructions to install Salt-based proxy minions and register them to {susemgr}, see xref:installation:install-proxy-unified.adoc[].
 
-The activation key should have the following channels:
+The activation key should have the following channels, pools and respective updates:
 
 ----
 - SUSE Manager Retail Branch Server 4.0 x86_64
@@ -102,21 +102,6 @@ The activation key should have the following channels:
     - SUSE Manager Proxy Module 4.0 x86_64
       - SUSE Manager Retail Branch Server Module 4.0 x86_64
 ----
-// - SUSE Manager 3.2 Tools ???
-
-Pools and respective updates.
-
-// ondrej said:
-////
-sle-product-sles15-sp1-updates-x86_64
-sle-product-suse-manager-retail-branch-server-4.0-updates-x86_64
-sle-module-server-applications15-sp1-updates-x86_64-smrbs-4.0
-sle-module-basesystem15-sp1-updates-x86_64-smrbs-4.0`
-
-sle-manager-tools15-updates-x86_64-sp1
-sle-module-desktop-applications15-sp1-updates-x86_64
-and respective pools
-////
 
 For mass deployments, see xref:retail:retail-mass-config.adoc[].
 
